--- a/Night Watchman/Assembly-CSharp-Editor.csproj
+++ b/Night Watchman/Assembly-CSharp-Editor.csproj
@@ -1131,6 +1131,7 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp.csproj" />
     <ProjectReference Include="Unity.RenderPipelines.HighDefinition.Config.Runtime.csproj" />
+    <ProjectReference Include="URPWizard.csproj" />
   </ItemGroup>
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
   <ItemGroup>
