--- a/Night Watchman/Assembly-CSharp.csproj
+++ b/Night Watchman/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\UnityTechnologies\StarterAssets\InputSystem\StarterAssetsInputs.cs" />
     <Compile Include="Assets\UnityTechnologies\StarterAssets\Mobile\Scripts\VirtualInputs\UIVirtualJoystick.cs" />
     <Compile Include="Assets\UnityTechnologies\StarterAssets\Mobile\Scripts\CanvasInputs\UICanvasControllerInput.cs" />
+    <Compile Include="Assets\Scripts\Charecter\PlayerHealthController.cs" />
     <Compile Include="Assets\Scripts\Charecter\PlayerCameraContoller.cs" />
     <Compile Include="Assets\UnityTechnologies\StarterAssets\ThirdPersonController\Scripts\ThirdPersonController.cs" />
     <Compile Include="Assets\Scripts\Weapon\Pistol.cs" />
