--- a/Night Watchman/Assembly-CSharp.csproj
+++ b/Night Watchman/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\GameManagerScripts\DeahtMenuScript.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\UnityTechnologies\StarterAssets\ThirdPersonController\Scripts\BasicRigidBodyPush.cs" />
+    <Compile Include="Assets\Scripts\GameManagerScripts\SettingsManager.cs" />
     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
     <Compile Include="Assets\UnityTechnologies\StarterAssets\Mobile\Scripts\VirtualInputs\UIVirtualButton.cs" />
     <Compile Include="Assets\Scripts\Enemy\WalkRobot.cs" />
